# gatb-core

gatb-core/: .gitignore  CMakeLists.txt  Untitled.ipynb
gatb-core/doc/doxygen/: gatb.doxyfile
gatb-core/src/: CMakeLists.txt
gatb-core/src/gatb/bank/api/: IBank.hpp  Sequence.hpp
gatb-core/src/gatb/bank/impl/: AbstractBank.hpp  Bank.cpp  Bank.hpp  BankAlbum.cpp  BankAlbum.hpp  BankBinary.cpp  BankBinary.hpp  BankComposite.hpp  BankConverterAlgorithm.cpp  BankConverterAlgorithm.hpp  BankFasta.cpp  BankFasta.hpp  BankHelpers.cpp  BankHelpers.hpp  BankRandom.cpp  BankRandom.hpp  BankSplitter.cpp  BankSplitter.hpp  BankStrings.hpp
gatb-core/src/gatb/bcalm2/: bcalm_algo.cpp  bcalm_algo.hpp  bglue_algo.cpp  bglue_algo.hpp  ograph.cpp  ographBin.h
gatb-core/src/gatb/debruijn/api/: IContainerNode.hpp
gatb-core/src/gatb/debruijn/impl/: BranchingAlgorithm.cpp  BranchingAlgorithm.hpp  ContainerNode.hpp  ExtremityInfo.hpp  Frontline.cpp  Frontline.hpp  Graph.cpp  Graph.hpp  GraphUnitigs.cpp  GraphUnitigs.hpp  IterativeExtensions.cpp  IterativeExtensions.hpp  NodesDeleter.hpp  Simplifications.cpp  Simplifications.hpp  Terminator.cpp  Terminator.hpp  Traversal.cpp  Traversal.hpp  (+2 more)
gatb-core/src/gatb/template/: TemplateSpecialization10.cpp.in  TemplateSpecialization5.cpp.in  TemplateSpecialization6.cpp.in  TemplateSpecialization7.cpp.in  TemplateSpecialization8.cpp.in  TemplateSpecialization9.cpp.in
gatb-core/test/benchmark/: CMakeLists.txt  bench1.cpp  bench_graph.cpp
gatb-core/test/unit/: CMakeLists.txt
gatb-core/tools/: CMakeLists.txt  dbgh5.cpp  dbginfo.cpp
(+143 files in other folders)
